# compass_os

./: .env.example  .gitignore  CLAUDE.md  Caddyfile  LICENSE  README.md  conftest.py  docker-compose.yml  pyproject.toml
backend/: .coveragerc  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: database.py  main.py  module_loader.py
backend/app/core/: health.py
backend/app/scripts/: migrate.py  wait_for_db.py
backend/migrations/: env.py
backend/tests/: test_health.py  test_main_cors.py  test_migrate_wrapper.py  test_module_loader.py
frontend/: Dockerfile  next.config.ts  package.json  tsconfig.json
frontend/docs/: design-system.md
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/shell/: AppShell.tsx  CommandPalette.tsx  Sidebar.tsx
frontend/src/components/ui/: DataCard.tsx  EmptyState.tsx  PageHeader.tsx  StatCard.tsx  index.ts
frontend/src/lib/: api.ts  modules.ts  theme.ts
modules/agile_digests/: module.json
modules/agile_digests/backend/: embeddings.py  jira_client.py  jira_sync.py  models.py  routes.py  schemas.py
modules/agile_digests/backend/tests/: _factories.py  test_digests.py  test_embeddings.py  test_features.py  test_jira_client.py  (+3 more)
modules/agile_digests/frontend/: page.tsx  types.ts
modules/hello/: module.json
modules/hello/backend/: __init__.py  models.py  routes.py
modules/hello/frontend/: page.tsx
modules/teams/: module.json
modules/teams/backend/: models.py  routes.py  schemas.py
modules/teams/frontend/: page.tsx  types.ts
(+48 files in other folders)
