[project]
name = "compass-v2-backend"
version = "0.1.0"
description = "Compass V2 — modular shell"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.10",
    "pgvector>=0.3",
    "fastembed>=0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
    "ruff>=0.9",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

# Pytest config moved to /app/pyproject.toml (repo root) so the rootdir spans both
# backend/ and modules/ — required because tests live in both trees and conftest
# needs to be at the common root.
